--- a/pom.xml
+++ b/pom.xml
@@ -31,5 +31,15 @@
     	<artifactId>commons-io</artifactId>
     	<version>1.4</version>
     </dependency>
+    <dependency>
+    	<groupId>commons-codec</groupId>
+    	<artifactId>commons-codec</artifactId>
+    	<version>1.4</version>
+    </dependency>
+    <dependency>
+    	<groupId>commons-collections</groupId>
+    	<artifactId>commons-collections</artifactId>
+    	<version>3.2.1</version>
+    </dependency>
   </dependencies>
 </project>
